docs: renamed citro to open mentorship

--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -42,7 +42,7 @@ import { Icon } from "astro-icon/components";
 				-->
 				<div title={siteConfig.title}>
 					<svg class="inline-block size-8 fill-current text-accent-base dark:text-accent-two drop-shadow-[0px_2.5px_2.5px_rgba(0,0,0,0.35)]">
-						<use href="/brand.svg#citrus"></use>
+						<use href="/brand.svg#Open Mentorship"></use>
 					</svg>
 				</div>
 				
